# xray-16-android-port

./: .gitignore  .gitmodules  CMakeLists.txt  build.gradle  gradle.properties  key.jks  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/xray16/phone/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xray16/phone/: MainActivity.kt
app/src/main/java/com/xray16/phone/engine/: Engine.kt
app/src/main/java/com/xray16/phone/engine/activity/: EngineActivity.kt
app/src/main/java/com/xray16/phone/presenter/: MainActivityPresenter.kt
app/src/main/java/com/xray16/phone/ui/activity/: MainActivity.kt
app/src/main/java/com/xray16/phone/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/xray16/phone/utils/: Extensions.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/xray16/phone/: ExampleUnitTest.kt
driver-helper/: build.gradle
driver-helper/src/main/jni/: Android.mk
driver-helper/src/main/jni/driver_helper/: nsbypass.c
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jpeg/: build.gradle
libopenal/: build.gradle
libvorbis/: build.gradle
lua/: build.gradle
lzo/: build.gradle
mimalloc/: build.gradle
regal/: build.gradle
